fix: breadcrumbs are bleeding outside

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -77,6 +77,7 @@ body {
   margin: 0px auto 10px auto;
   padding: 5px;
   border-radius: 5px;
+  box-sizing: border-box;
 }
 
 main {
